--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-beautifulsoup4
-requests
-django-extensions
+beautifulsoup4==0.0.1
+requests==2.24.0
+django-extensions==3.1.1
+requests-html==0.10.0
